fix navbar issue on small device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,7 @@ h1, h2 {
 .navbar-collapse .navbar-text,.navbar-collapse .navbar-nav>li>a {
 	font-family: 'Lato', sans-serif;
 	color: #FFFFFF;
+	margin-left: 10px;
 }
 .navbar-header .navbar-brand {
 	color: #F28705;
@@ -46,11 +47,11 @@ h1, h2 {
 	-khtml-border-radius: 10px;
 }
 .nav-container {
-	margin-left: 50px;
-	margin-right: 50px;
+	/*margin-left: 50px;
+	margin-right: 50px; */
 	padding-top: 5px;
 	padding-bottom: 5px;
-	width: auto;
+	/*width: auto;*/
 }
 #sign-in-bar {
 	font-size: 16px;
